--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -613,5 +613,9 @@ footer{
     }
 }
 .h3{
+     font-size: 20px;
+    font-weight: 600;
+    color: var(--text-color-second);
+    margin-bottom: 10px;
     margin-left: 41px;
 }
